--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Hao Xuan Yap",
-    "jobTitle": "Senior iOS Engineer",
-    "url": "https://<your-username>.github.io/",
+    "jobTitle": "iOS Engineer",
+    "url": "https://xuanzi23.github.io/yaphaoxuan/",
     "sameAs": [
-      "https://github.com/<your-username>",
-      "https://www.linkedin.com/in/<your-linkedin>"
+      "https://github.com/xuanzi23",
+      "https://www.linkedin.com/in/hao-xuan-yap"
     ]
   }
   </script>
@@ -137,13 +137,12 @@
   <!-- Nav -->
   <nav class="nav">
     <div class="container nav-inner">
-      <div class="brand">HaoXuan<b>.dev</b></div>
+      <div class="brand">HaoXuan</div>
       <div class="row">
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
-        <a class="btn" href="#" onclick="toggleTheme(); return false;" aria-label="Toggle theme">🌗 Theme</a>
       </div>
     </div>
   </nav>
@@ -156,9 +155,9 @@
       <p class="lead">I’m <strong>Hao Xuan</strong>, an iOS engineer focused on performance, analytics quality, and delightful UX at scale. I turn product goals into measurable outcomes.</p>
       <div class="cta">
         <a class="btn primary" href="/assets/resume.pdf" target="_blank" rel="noopener">📄 View Résumé</a>
-        <a class="btn" href="mailto:hello@example.com">✉️ Email me</a>
-        <a class="btn" href="https://github.com/<your-username>" target="_blank" rel="noopener">🐙 GitHub</a>
-        <a class="btn" href="https://www.linkedin.com/in/<your-linkedin>" target="_blank" rel="noopener">🔗 LinkedIn</a>
+        <a class="btn" href="mailto:yaphaoxuan@gmail.com">✉️ Email me</a>
+        <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
+        <a class="btn" href="https://www.linkedin.com/in/hao-xuan-yap/" target="_blank" rel="noopener">🔗 LinkedIn</a>
       </div>
     </div>
     <div class="card avatar" aria-label="Profile image placeholder"></div>
@@ -186,33 +185,6 @@
             </div>
           </div>
         </article>
-        <!-- Project Card 2 -->
-        <article class="card proj">
-          <div class="thumb" role="img" aria-label="Project thumbnail"></div>
-          <div>
-            <h3>GO25 – Ride Booking Platform</h3>
-            <p class="muted">Stabilized PHP backend on AWS, fixed 504s, optimized MySQL queries, and added FCM push + SES templates.</p>
-            <div class="tags">
-              <span class="tag">PHP</span>
-              <span class="tag">AWS</span>
-              <span class="tag">MySQL</span>
-              <span class="tag">DevOps</span>
-            </div>
-          </div>
-        </article>
-        <!-- Project Card 3 -->
-        <article class="card proj">
-          <div class="thumb" role="img" aria-label="Project thumbnail"></div>
-          <div>
-            <h3>Analytics Standards & Tooling</h3>
-            <p class="muted">Unified event schema across teams, added 50% visibility tracking, debounce click, and test harnesses for correctness.</p>
-            <div class="tags">
-              <span class="tag">Analytics</span>
-              <span class="tag">Testing</span>
-              <span class="tag">SDK</span>
-            </div>
-          </div>
-        </article>
       </div>
     </section>
 
@@ -237,10 +209,6 @@
           <div class="row"><strong>FairPrice Group</strong> <span class="muted">— Senior iOS Engineer</span> <span class="right muted">2023 — Present</span></div>
           <p class="muted">Own OmniHome modules, refactor to TCA, remove tech debt (30+ flags), and uplift performance and analytics quality.</p>
         </div>
-        <div class="tl-item">
-          <div class="row"><strong>GO25</strong> <span class="muted">— Full‑stack / Infra</span> <span class="right muted">2021 — 2023</span></div>
-          <p class="muted">Stabilized operations, resolved 500/504s, automated alerts, improved DB indexes, and added admin tooling.</p>
-        </div>
       </div>
     </section>
 
@@ -249,9 +217,9 @@
       <h2 class="section-title">Contact</h2>
       <p class="muted">Want to collaborate or have a role in mind? Reach out.</p>
       <div class="row">
-        <a class="btn primary" href="mailto:hello@example.com">✉️ hello@example.com</a>
-        <a class="btn" href="https://cal.com/<your-handle>" target="_blank" rel="noopener">📅 Book a chat</a>
-        <a class="btn" href="https://github.com/<your-username>" target="_blank" rel="noopener">🐙 GitHub</a>
+        <a class="btn primary" href="mailto:yaphapxuan@gmail.com">✉️ yaphapxuan@gmail.com</a>
+        <!-- <a class="btn" href="https://cal.com/<your-handle>" target="_blank" rel="noopener">📅 Book a chat</a> -->
+        <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
       </div>
     </section>
   </main>
@@ -260,10 +228,10 @@
     <div class="container row">
       <div>© <span id="y"></span> Hao Xuan Yap</div>
       <div class="right social">
-        <a href="https://github.com/<your-username>" aria-label="GitHub" target="_blank" rel="noopener" title="GitHub">
+        <a href="https://github.com/xuanzi23" aria-label="GitHub" target="_blank" rel="noopener" title="GitHub">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.75.08-.74.08-.74 1.22.09 1.87 1.25 1.87 1.25 1.08 1.85 2.83 1.31 3.52 1 .11-.78.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.4 11.4 0 0 1 6 0c2.28-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.77.84 1.24 1.91 1.24 3.22 0 4.61-2.8 5.62-5.48 5.92.43.37.81 1.1.81 2.22v3.29c0 .32.21.69.83.58A12 12 0 0 0 12 .5Z"/></svg>
         </a>
-        <a href="https://www.linkedin.com/in/<your-linkedin>" aria-label="LinkedIn" target="_blank" rel="noopener" title="LinkedIn">
+        <a href="https://www.linkedin.com/in/hao-xuan-yap/" aria-label="LinkedIn" target="_blank" rel="noopener" title="LinkedIn">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8.5H4.5V23.5H.5V8.5zm7.98 0h3.83v2.05h.05c.53-1 1.83-2.05 3.77-2.05 4.04 0 4.79 2.66 4.79 6.11V23.5H17.8v-5.79c0-1.38-.03-3.15-1.92-3.15-1.92 0-2.22 1.5-2.22 3.05V23.5H8.48V8.5z"/></svg>
         </a>
       </div>
