--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hao Xuan Yap – iOS Engineer & Product Builder</title>
-  <meta name="description" content="Portfolio of Hao Xuan Yap – iOS engineer specializing in SwiftUI, TCA, analytics, and high‑performance mobile experiences." />
-  <meta name="theme-color" content="#0ea5e9" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Hao Xuan Yap – iOS Engineer & Product Builder</title>
+<meta name="description" content="Portfolio of Hao Xuan Yap – iOS engineer specializing in SwiftUI, TCA, analytics, and high‑performance mobile experiences." />
+<meta name="theme-color" content="#0ea5e9" />
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Hao Xuan Yap – iOS Engineer & Product Builder" />
-  <meta property="og:description" content="Swift + SwiftUI + TCA | Analytics | Performance. Selected projects, writing, and contact." />
-  <meta property="og:image" content="/assets/og-image.png" />
-  <meta name="twitter:card" content="summary_large_image" />
+<!-- Open Graph / Twitter -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Hao Xuan Yap – iOS Engineer & Product Builder" />
+<meta property="og:description" content="Swift + SwiftUI + TCA | Analytics | Performance. Selected projects, writing, and contact." />
+<meta property="og:image" content="/assets/og-image.png" />
+<meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Favicon placeholders (optional). Replace with your files in /assets -->
-  <link rel="icon" href="/assets/favicon.ico" />
+<!-- Favicon placeholders (optional). Replace with your files in /assets -->
+<link rel="icon" href="/assets/favicon.ico" />
 
-  <!-- Fonts (system stack for speed). Swap for your own if you like. -->
-  <style>
+<!-- Fonts (system stack for speed). Swap for your own if you like. -->
+<style>
     :root {
-      --bg: #0b1020;           /* dark navy */
-      --panel: #11162a;        /* elevated card */
-      --text: #e6e8ef;         /* primary text */
-      --muted: #a8b0c3;        /* secondary text */
-      --brand: #0ea5e9;        /* cyan */
-      --brand-2: #22c55e;      /* green */
-      --border: #1e2745;
-      --shadow: 0 10px 30px rgba(2, 6, 23, 0.45);
+    --bg: #0b1020;           /* dark navy */
+    --panel: #11162a;        /* elevated card */
+    --text: #e6e8ef;         /* primary text */
+    --muted: #a8b0c3;        /* secondary text */
+    --brand: #0ea5e9;        /* cyan */
+    --brand-2: #22c55e;      /* green */
+    --border: #1e2745;
+    --shadow: 0 10px 30px rgba(2, 6, 23, 0.45);
     }
     @media (prefers-color-scheme: light) {
-      :root { --bg:#f7fafc; --panel:#ffffff; --text:#0f172a; --muted:#475569; --border:#e2e8f0; --shadow: 0 10px 30px rgba(15, 23, 42, 0.08);} 
+    :root { --bg:#f7fafc; --panel:#ffffff; --text:#0f172a; --muted:#475569; --border:#e2e8f0; --shadow: 0 10px 30px rgba(15, 23, 42, 0.08);} 
     }
     html { scroll-behavior: smooth; }
     * { box-sizing: border-box; }
@@ -102,145 +102,201 @@
 
     /* Print */
     @media print { .nav, .cta .btn[href*="mailto:"] { display:none !important; } body { background: #fff; } }
-  </style>
+</style>
 
-  <script>
+<script>
     // Dark/Light toggle with localStorage (optional)
     (function() {
-      const saved = localStorage.getItem('theme');
-      if (saved === 'light') document.documentElement.classList.add('light');
+    const saved = localStorage.getItem('theme');
+    if (saved === 'light') document.documentElement.classList.add('light');
     })();
     function toggleTheme(){
-      const isLight = document.documentElement.classList.toggle('light');
-      localStorage.setItem('theme', isLight ? 'light' : 'dark');
+    const isLight = document.documentElement.classList.toggle('light');
+    localStorage.setItem('theme', isLight ? 'light' : 'dark');
     }
-  </script>
+</script>
 
-  <!-- Structured data -->
-  <script type="application/ld+json">
-  {
+<!-- Structured data -->
+<script type="application/ld+json">
+{
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Hao Xuan Yap",
     "jobTitle": "iOS Engineer",
     "url": "https://xuanzi23.github.io/yaphaoxuan/",
     "sameAs": [
-      "https://github.com/xuanzi23",
-      "https://www.linkedin.com/in/hao-xuan-yap"
+    "https://github.com/xuanzi23",
+    "https://www.linkedin.com/in/hao-xuan-yap"
     ]
-  }
-  </script>
+}
+</script>
 </head>
 <body>
-  <a class="sr-only" href="#main">Skip to content</a>
+<a class="sr-only" href="#main">Skip to content</a>
 
-  <!-- Nav -->
-  <nav class="nav">
+<!-- Nav -->
+<nav class="nav">
     <div class="container nav-inner">
-      <div class="brand">HaoXuan</div>
-      <div class="row">
+    <div class="brand">HaoXuan</div>
+    <div class="row">
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
-      </div>
     </div>
-  </nav>
+    </div>
+</nav>
 
-  <!-- Hero -->
-  <header class="container hero" id="main">
+<!-- Hero -->
+<header class="container hero" id="main">
     <div>
-      <span class="eyebrow">iOS • SwiftUI • TCA • Analytics</span>
-      <h1>Building fast, instrumented mobile apps for real users.</h1>
-      <p class="lead">I’m <strong>Hao Xuan</strong>, an iOS engineer focused on performance, analytics quality, and delightful UX at scale. I turn product goals into measurable outcomes.</p>
-      <div class="cta">
+    <span class="eyebrow">iOS • SwiftUI • TCA • Analytics</span>
+    <h1>Building fast, instrumented mobile apps for real users.</h1>
+    <p class="lead">I’m <strong>Hao Xuan</strong>, an iOS engineer focused on performance, analytics quality, and delightful UX at scale. I turn product goals into measurable outcomes.</p>
+    <div class="cta">
         <a class="btn primary" href="/assets/resume.pdf" target="_blank" rel="noopener">📄 View Résumé</a>
         <a class="btn" href="mailto:yaphaoxuan@gmail.com">✉️ Email me</a>
         <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
         <a class="btn" href="https://www.linkedin.com/in/hao-xuan-yap/" target="_blank" rel="noopener">🔗 LinkedIn</a>
-      </div>
+    </div>
     </div>
     <div class="card avatar" aria-label="Profile image placeholder"></div>
-  </header>
+</header>
 
-  <main class="container">
+<main class="container">
     <!-- Projects -->
     <section id="projects">
-      <div class="row">
+    <div class="row">
         <h2 class="section-title">Selected Projects</h2>
         <a class="right" href="https://github.com/<your-username>?tab=repositories" target="_blank" rel="noopener">View all →</a>
-      </div>
-      <div class="grid cols-3">
+    </div>
+    <div class="grid cols-3">
         <!-- Project Card 1 -->
         <article class="card proj">
-          <div class="thumb" role="img" aria-label="Project thumbnail"></div>
-          <div>
+        <div class="thumb" role="img" aria-label="Project thumbnail"></div>
+        <div>
             <h3>Everything Food – iOS App</h3>
             <p class="muted">Led a redesign with SwiftUI + TCA, improved cold start by 28%, and shipped a robust analytics pipeline (Segment → GA4 → Amplitude).</p>
             <div class="tags">
-              <span class="tag">SwiftUI</span>
-              <span class="tag">TCA</span>
-              <span class="tag">GA4</span>
-              <span class="tag">Performance</span>
+            <span class="tag">SwiftUI</span>
+            <span class="tag">TCA</span>
+            <span class="tag">GA4</span>
+            <span class="tag">Performance</span>
             </div>
-          </div>
+        </div>
         </article>
-      </div>
+    </div>
     </section>
 
     <!-- Skills -->
     <section id="skills">
-      <h2 class="section-title">Skills</h2>
-      <div class="chips">
+    <h2 class="section-title">Skills</h2>
+    <div class="chips">
         <span class="chip">Swift • SwiftUI • UIKit</span>
         <span class="chip">TCA • Combine • RxSwift</span>
         <span class="chip">Segment • Firebase GA4 • Amplitude</span>
         <span class="chip">XCTest • Instruments • Profiling</span>
         <span class="chip">PHP • MySQL • AWS EC2/SES/FCM</span>
         <span class="chip">Design Systems • Accessibility</span>
-      </div>
+    </div>
     </section>
 
     <!-- Experience -->
     <section id="experience">
-      <h2 class="section-title">Experience</h2>
-      <div class="timeline">
+    <h2 class="section-title">Experience</h2>
+    <div class="timeline">
+
         <div class="tl-item">
-          <div class="row"><strong>FairPrice Group</strong> <span class="muted">— Senior iOS Engineer</span> <span class="right muted">2023 — Present</span></div>
-          <p class="muted">Own OmniHome modules, refactor to TCA, remove tech debt (30+ flags), and uplift performance and analytics quality.</p>
+        <div class="row">
+            <strong>FairPrice Group</strong>
+            <span class="muted">— iOS Developer</span>
+            <span class="right muted">Sep 2022 — Present</span>
         </div>
-      </div>
+        <p class="muted">
+            Own OmniHome modules, refactor to TCA, remove tech debt (30+ flags), and uplift performance and analytics quality.
+            Build and maintain large-scale iOS features with Swift/SwiftUI, performance and analytics rigor (Segment/GA4/Amplitude), and shipping reliability for a high-traffic consumer app.
+        </p>
+        </div>
+
+        <div class="tl-item">
+        <div class="row">
+            <strong>OSIM International Pte Ltd</strong>
+            <span class="muted">— Mobile Application Developer</span>
+            <span class="right muted">Jul 2021 — Aug 2022</span>
+        </div>
+        <p class="muted">
+            Developed and maintained Objective-C/Swift apps, implemented BLE protocols, and shipped reliable hardware↔︎app communication for wellness devices.
+        </p>
+        </div>
+
+        <div class="tl-item">
+        <div class="row">
+            <strong>Two App Studio</strong>
+            <span class="muted">— iOS Developer</span>
+            <span class="right muted">Dec 2019 — Jun 2021</span>
+        </div>
+        <p class="muted">
+            Integrated modern iOS APIs (e.g., PencilKit, WidgetKit) and maintained shipping apps including
+            <a href="https://journey.cloud/home" target="_blank" rel="noopener">Journey</a> and
+            <a href="https://jotterpad.app" target="_blank" rel="noopener">JotterPad</a>.
+        </p>
+        </div>
+
+        <div class="tl-item">
+        <div class="row">
+            <strong>MTech Holdings Sdn Bhd</strong>
+            <span class="muted">— Project Manager</span>
+            <span class="right muted">Jul 2018 — Dec 2019</span>
+        </div>
+        <p class="muted">
+            Led requirements, specs, and delivery using Gantt-based planning for customized systems (e.g., MJ Survey System, Online Order Asia).
+        </p>
+        </div>
+
+        <div class="tl-item">
+        <div class="row">
+            <strong>MTech Holdings Sdn Bhd</strong>
+            <span class="muted">— Software Engineer</span>
+            <span class="right muted">Jul 2016 — Dec 2019</span>
+        </div>
+        <p class="muted">
+            Shipped iOS apps (Swift) and web APIs (PHP), plus POS/React-Native apps and multi-vendor e-commerce.
+            Integrated third-party APIs (Lazada, Shopee, GA, Facebook).
+        </p>
+        </div>
+
+    </div>
     </section>
 
     <!-- Contact -->
     <section id="contact">
-      <h2 class="section-title">Contact</h2>
-      <p class="muted">Want to collaborate or have a role in mind? Reach out.</p>
-      <div class="row">
+    <h2 class="section-title">Contact</h2>
+    <p class="muted">Want to collaborate or have a role in mind? Reach out.</p>
+    <div class="row">
         <a class="btn primary" href="mailto:yaphapxuan@gmail.com">✉️ yaphapxuan@gmail.com</a>
         <!-- <a class="btn" href="https://cal.com/<your-handle>" target="_blank" rel="noopener">📅 Book a chat</a> -->
         <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
-      </div>
+    </div>
     </section>
-  </main>
+</main>
 
-  <footer>
+<footer>
     <div class="container row">
-      <div>© <span id="y"></span> Hao Xuan Yap</div>
-      <div class="right social">
+    <div>© <span id="y"></span> Hao Xuan Yap</div>
+    <div class="right social">
         <a href="https://github.com/xuanzi23" aria-label="GitHub" target="_blank" rel="noopener" title="GitHub">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.75.08-.74.08-.74 1.22.09 1.87 1.25 1.87 1.25 1.08 1.85 2.83 1.31 3.52 1 .11-.78.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.4 11.4 0 0 1 6 0c2.28-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.77.84 1.24 1.91 1.24 3.22 0 4.61-2.8 5.62-5.48 5.92.43.37.81 1.1.81 2.22v3.29c0 .32.21.69.83.58A12 12 0 0 0 12 .5Z"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.75.08-.74.08-.74 1.22.09 1.87 1.25 1.87 1.25 1.08 1.85 2.83 1.31 3.52 1 .11-.78.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.4 11.4 0 0 1 6 0c2.28-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.77.84 1.24 1.91 1.24 3.22 0 4.61-2.8 5.62-5.48 5.92.43.37.81 1.1.81 2.22v3.29c0 .32.21.69.83.58A12 12 0 0 0 12 .5Z"/></svg>
         </a>
         <a href="https://www.linkedin.com/in/hao-xuan-yap/" aria-label="LinkedIn" target="_blank" rel="noopener" title="LinkedIn">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8.5H4.5V23.5H.5V8.5zm7.98 0h3.83v2.05h.05c.53-1 1.83-2.05 3.77-2.05 4.04 0 4.79 2.66 4.79 6.11V23.5H17.8v-5.79c0-1.38-.03-3.15-1.92-3.15-1.92 0-2.22 1.5-2.22 3.05V23.5H8.48V8.5z"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8.5H4.5V23.5H.5V8.5zm7.98 0h3.83v2.05h.05c.53-1 1.83-2.05 3.77-2.05 4.04 0 4.79 2.66 4.79 6.11V23.5H17.8v-5.79c0-1.38-.03-3.15-1.92-3.15-1.92 0-2.22 1.5-2.22 3.05V23.5H8.48V8.5z"/></svg>
         </a>
-      </div>
     </div>
-  </footer>
+    </div>
+</footer>
 
-  <script>
+<script>
     // Year update
     document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+</script>
 </body>
 </html>
