--- a/index.html
+++ b/index.html
@@ -168,20 +168,45 @@
     <section id="projects">
     <div class="row">
         <h2 class="section-title">Selected Projects</h2>
-        <a class="right" href="https://github.com/<your-username>?tab=repositories" target="_blank" rel="noopener">View all →</a>
+        <!-- <a class="right" href="https://github.com/<your-username>?tab=repositories" target="_blank" rel="noopener">View all →</a> -->
     </div>
     <div class="grid cols-3">
         <!-- Project Card 1 -->
         <article class="card proj">
         <div class="thumb" role="img" aria-label="Project thumbnail"></div>
         <div>
-            <h3>Everything Food – iOS App</h3>
-            <p class="muted">Led a redesign with SwiftUI + TCA, improved cold start by 28%, and shipped a robust analytics pipeline (Segment → GA4 → Amplitude).</p>
+            <h3>FairPrice Group</h3>
+            <p class="muted">Led a redesign with SwiftUI + TCA and shipped a robust analytics pipeline (Segment → GA4 → Amplitude).</p>
             <div class="tags">
             <span class="tag">SwiftUI</span>
             <span class="tag">TCA</span>
             <span class="tag">GA4</span>
             <span class="tag">Performance</span>
+            </div>
+        </div>
+        </article>
+        <!-- Project Card 2 -->
+        <article class="card proj">
+        <div class="thumb" role="img" aria-label="Project thumbnail"></div>
+        <div>
+            <h3>OSIM Well-Being</h3>
+            <p class="muted">Develop and maintain OSIM apps using Objective-C, Swift and Flutter. Handle BLE protocol and communication between hardware and mobile apps.</p>
+            <div class="tags">
+            <span class="tag">Flutter</span>
+            <span class="tag">Bluetooth Low Energy (BLE)</span>
+            </div>
+        </div>
+        </article>
+        <!-- Project Card 3 -->
+        <article class="card proj">
+        <div class="thumb" role="img" aria-label="Project thumbnail"></div>
+        <div>
+            <h3>Journey - Diary, Journal</h3>
+            <p class="muted">A journal, a diary app that support Markdown syntax.</p>
+            <div class="tags">
+            <span class="tag">SwiftUI</span>
+            <span class="tag">StoreKit</span>
+            <span class="tag">Firebase</span>
             </div>
         </div>
         </article>
