--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
             <div class="tags">
             <span class="tag">SwiftUI</span>
             <span class="tag">StoreKit</span>
+            <span class="tag">PencilKit</span>
+            <span class="tag">WidgetKit</span>
             <span class="tag">Firebase</span>
             </div>
         </div>
@@ -221,7 +223,7 @@
         <span class="chip">TCA • Combine • RxSwift</span>
         <span class="chip">Segment • Firebase GA4 • Amplitude</span>
         <span class="chip">XCTest • Instruments • Profiling</span>
-        <span class="chip">PHP • MySQL • AWS EC2/SES/FCM</span>
+        <span class="chip">PHP • MySQL • AWS EC2</span>
         <span class="chip">Design Systems • Accessibility</span>
     </div>
     </section>
@@ -240,6 +242,7 @@
         <p class="muted">
             Own OmniHome modules, refactor to TCA, remove tech debt (30+ flags), and uplift performance and analytics quality.
             Build and maintain large-scale iOS features with Swift/SwiftUI, performance and analytics rigor (Segment/GA4/Amplitude), and shipping reliability for a high-traffic consumer app.
+            <a href="https://apps.apple.com/sg/app/fairprice-group/id1012365118" target="_blank" rel="noopener">FairPrice Group</a>
         </p>
         </div>
 
@@ -251,6 +254,7 @@
         </div>
         <p class="muted">
             Developed and maintained Objective-C/Swift apps, implemented BLE protocols, and shipped reliable hardware↔︎app communication for wellness devices.
+            <a href="https://apps.apple.com/my/app/osim-well-being/id1588337384" target="_blank" rel="noopener">OSIM Well-Being</a>
         </p>
         </div>
 
@@ -262,7 +266,7 @@
         </div>
         <p class="muted">
             Integrated modern iOS APIs (e.g., PencilKit, WidgetKit) and maintained shipping apps including
-            <a href="https://journey.cloud/home" target="_blank" rel="noopener">Journey</a> and
+            <a href="https://journey.cloud" target="_blank" rel="noopener">Journey</a> and
             <a href="https://jotterpad.app" target="_blank" rel="noopener">JotterPad</a>.
         </p>
         </div>
@@ -299,7 +303,8 @@
     <p class="muted">Want to collaborate or have a role in mind? Reach out.</p>
     <div class="row">
         <a class="btn primary" href="mailto:yaphapxuan@gmail.com">✉️ yaphapxuan@gmail.com</a>
-        <!-- <a class="btn" href="https://cal.com/<your-handle>" target="_blank" rel="noopener">📅 Book a chat</a> -->
+        <a class="btn" href="https://wa.me/60107666676" target="_blank" rel="noopener">💬 WhatsApp (MY) +60 10 766 6676</a>
+        <a class="btn" href="https://wa.me/6589261513" target="_blank" rel="noopener">💬 WhatsApp (SG) +65 8926 1513</a>
         <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
     </div>
     </section>
