--- a/index.html
+++ b/index.html
@@ -239,10 +239,12 @@
             <span class="muted">— iOS Developer</span>
             <span class="right muted">Sep 2022 — Present</span>
         </div>
+        <a href="https://apps.apple.com/sg/app/fairprice-group/id1012365118" target="_blank" rel="noopener">FairPrice Group</a>
         <p class="muted">
-            Own OmniHome modules, refactor to TCA, remove tech debt (30+ flags), and uplift performance and analytics quality.
+            Own OmniHome modules, Search modules, adapt to TCA, remove tech debt (30+ flags), and uplift performance and analytics quality.
+        </p>
+        <p class="muted">
             Build and maintain large-scale iOS features with Swift/SwiftUI, performance and analytics rigor (Segment/GA4/Amplitude), and shipping reliability for a high-traffic consumer app.
-            <a href="https://apps.apple.com/sg/app/fairprice-group/id1012365118" target="_blank" rel="noopener">FairPrice Group</a>
         </p>
         </div>
 
@@ -252,9 +254,9 @@
             <span class="muted">— Mobile Application Developer</span>
             <span class="right muted">Jul 2021 — Aug 2022</span>
         </div>
+        <a href="https://apps.apple.com/my/app/osim-well-being/id1588337384" target="_blank" rel="noopener">OSIM Well-Being</a>
         <p class="muted">
             Developed and maintained Objective-C/Swift apps, implemented BLE protocols, and shipped reliable hardware↔︎app communication for wellness devices.
-            <a href="https://apps.apple.com/my/app/osim-well-being/id1588337384" target="_blank" rel="noopener">OSIM Well-Being</a>
         </p>
         </div>
 
@@ -264,10 +266,13 @@
             <span class="muted">— iOS Developer</span>
             <span class="right muted">Dec 2019 — Jun 2021</span>
         </div>
+        <a href="https://journey.cloud" target="_blank" rel="noopener">Journey</a>
+        <a href="https://jotterpad.app" target="_blank" rel="noopener">JotterPad</a>.
         <p class="muted">
-            Integrated modern iOS APIs (e.g., PencilKit, WidgetKit) and maintained shipping apps including
-            <a href="https://journey.cloud" target="_blank" rel="noopener">Journey</a> and
-            <a href="https://jotterpad.app" target="_blank" rel="noopener">JotterPad</a>.
+            Integrated modern iOS APIs (e.g., PencilKit, WidgetKit) and maintained shipping apps.
+        </p>
+        <p class="muted">
+            Refactor UIKit codebase to SwiftUI, improved in-app purchase flows, and fixed critical bugs.
         </p>
         </div>
 
