--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
     <div class="grid cols-3">
         <!-- Project Card 1 -->
         <article class="card proj">
-        <div class="thumb" role="img" aria-label="Project thumbnail"></div>
+        <div class="thumb" role="img" aria-label="FairPrice Group app icon" style="background-image:url('assets/fairprice.webp'); background-size:cover; background-position:center;"></div>
         <div>
             <h3>FairPrice Group</h3>
-            <p class="muted">Led a redesign with SwiftUI + TCA and shipped a robust analytics pipeline (Segment → GA4 → Amplitude).</p>
+            <p class="muted">Develop and maintain with SwiftUI + TCA and shipped a robust analytics pipeline.</p>
             <div class="tags">
             <span class="tag">SwiftUI</span>
             <span class="tag">TCA</span>
@@ -187,7 +187,7 @@
         </article>
         <!-- Project Card 2 -->
         <article class="card proj">
-        <div class="thumb" role="img" aria-label="Project thumbnail"></div>
+        <div class="thumb" role="img" aria-label="OSIM Well-Being app icon" style="background-image:url('assets/osim.webp'); background-size:cover; background-position:center;"></div>
         <div>
             <h3>OSIM Well-Being</h3>
             <p class="muted">Develop and maintain OSIM apps using Objective-C, Swift and Flutter. Handle BLE protocol and communication between hardware and mobile apps.</p>
@@ -199,7 +199,7 @@
         </article>
         <!-- Project Card 3 -->
         <article class="card proj">
-        <div class="thumb" role="img" aria-label="Project thumbnail"></div>
+        <div class="thumb" role="img" aria-label="Journey app icon" style="background-image:url('assets/journey.webp'); background-size:cover; background-position:center;"></div>
         <div>
             <h3>Journey - Diary, Journal</h3>
             <p class="muted">A journal, a diary app that support Markdown syntax.</p>
@@ -209,6 +209,7 @@
             <span class="tag">PencilKit</span>
             <span class="tag">WidgetKit</span>
             <span class="tag">Firebase</span>
+            <span class="tag">Mac Catalyst</span>
             </div>
         </div>
         </article>
@@ -266,10 +267,13 @@
             <span class="muted">— iOS Developer</span>
             <span class="right muted">Dec 2019 — Jun 2021</span>
         </div>
-        <a href="https://journey.cloud" target="_blank" rel="noopener">Journey</a>
-        <a href="https://jotterpad.app" target="_blank" rel="noopener">JotterPad</a>.
+        <a href="https://journey.cloud" target="_blank" rel="noopener">Journey</a> and
+        <a href="https://jotterpad.app" target="_blank" rel="noopener">JotterPad</a>
         <p class="muted">
             Integrated modern iOS APIs (e.g., PencilKit, WidgetKit) and maintained shipping apps.
+        </p>
+        <p class="muted">
+            Create MacOS apps and develop to MacOS Store.
         </p>
         <p class="muted">
             Refactor UIKit codebase to SwiftUI, improved in-app purchase flows, and fixed critical bugs.
