--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 <!-- Hero -->
 <header class="container hero" id="main">
     <div>
-    <span class="eyebrow">iOS • SwiftUI • TCA • Analytics</span>
+    <span class="eyebrow">iOS • MacOS • SwiftUI • UIKit • React Native • Flutter</span>
     <h1>Building fast, instrumented mobile apps for real users.</h1>
-    <p class="lead">I’m <strong>Hao Xuan</strong>, an iOS engineer focused on performance, analytics quality, and delightful UX at scale. I turn product goals into measurable outcomes.</p>
+    <p class="lead">I’m <strong>Hao Xuan</strong>, an Mobile Apps engineer focused on performance, analytics quality, and delightful UX at scale. I turn product goals into measurable outcomes.</p>
     <div class="cta">
-        <a class="btn primary" href="/assets/resume.pdf" target="_blank" rel="noopener">📄 View Résumé</a>
+        <!-- <a class="btn" href="/assets/resume.pdf" target="_blank" rel="noopener">📄 View Résumé</a> -->
         <a class="btn" href="mailto:yaphaoxuan@gmail.com">✉️ Email me</a>
         <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
         <a class="btn" href="https://www.linkedin.com/in/hao-xuan-yap/" target="_blank" rel="noopener">🔗 LinkedIn</a>
@@ -221,6 +221,7 @@
     <h2 class="section-title">Skills</h2>
     <div class="chips">
         <span class="chip">Swift • SwiftUI • UIKit</span>
+        <span class="chip">MacOS • iOS</span>
         <span class="chip">TCA • Combine • RxSwift</span>
         <span class="chip">Segment • Firebase GA4 • Amplitude</span>
         <span class="chip">XCTest • Instruments • Profiling</span>
@@ -311,7 +312,7 @@
     <h2 class="section-title">Contact</h2>
     <p class="muted">Want to collaborate or have a role in mind? Reach out.</p>
     <div class="row">
-        <a class="btn primary" href="mailto:yaphapxuan@gmail.com">✉️ yaphapxuan@gmail.com</a>
+        <a class="btn" href="mailto:yaphapxuan@gmail.com">✉️ yaphapxuan@gmail.com</a>
         <a class="btn" href="https://wa.me/60107666676" target="_blank" rel="noopener">💬 WhatsApp (MY) +60 10 766 6676</a>
         <a class="btn" href="https://wa.me/6589261513" target="_blank" rel="noopener">💬 WhatsApp (SG) +65 8926 1513</a>
         <a class="btn" href="https://github.com/xuanzi23" target="_blank" rel="noopener">🐙 GitHub</a>
